# FitnessAgents

./: .gitignore  .gitmodules  README.md
fitness_agents_project/: pyproject.toml
fitness_agents_project/fitness_agents_project/: health_data_api.py  heart_rates_data_api.py  requirements.txt  workout_data_api.py  wsgi.py
fitness_agents_project/src/: agents.py  app.py  tasks.py  utils.py
fitness_agents_project/src/pages/: 1_outputs_viewer.py
fitness_agents_project/src/tools/: query_engine_tool.py  toolset.py
fitness_agents_project/src/tools/data/: fitness_details.json
fitness_agents_project/src/tools/data/chromadb/: chroma.sqlite3
fitness_agents_project/src/tools/data/outputs/: health_report_analysis.md  nutrition_plan.md  user_persona.md  wellbeing_plan.md  workout_plan.md
